--- a/admin.html
+++ b/admin.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel de Administración - Chaira Travel</title>
+    <title>Panel de Administración - Chairá Travel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="admin-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,7 +26,7 @@
                 </form>
                 <p class="login-error" id="loginError"></p>
                 <p style="margin-top: 1rem; font-size: 0.85rem; color: #666; text-align: center;">
-                    <small>Contraseña actual: chaira2026</small>
+                    
                 </p>
             </div>
         </div>
