--- a/index.html
+++ b/index.html
@@ -109,6 +109,36 @@
                         </div>
                     </div>
                     <div class="package-content">
+                        <h3>Paquete 1</h3>
+                        <div class="package-content-wrapper">
+                            <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
+                            <ul class="package-features">  
+                                <li>Travesía Fluvial por los Ríos Guayas y Caguán (ida y regreso)</li>
+                                <li>Visita a la bocana</li>
+                                <li>Disfrute del atardecer, y baño recreativo (opcional).</li>
+                                <li>Guías locales</li>
+                                <li>Recorrido interpretativo por pescador del Caquetá</li>
+                                <li>Recuerdo fotográfico digital</li>
+                                <li>Implementos y equipos de seguridad</li>
+                                <li>Tarjeta de Asistencia Médica</li>
+                            </ul>
+                            <b>No incluye:<br>Gastos y servicios no especificados<br>Bebidas y consumos no descritos</b>
+                        </div>
+                        <button class="btn-ver-mas" onclick="togglePackageContent(0)">Ver más</button>
+                        <div class="package-price">Desde $59.999 Por persona (Minimo 5 pax)</div>
+                        <a href="https://wa.me/573193981055?text=Hola,%20me%20interesa%20obtener%20más%20información%20sobre%20este%20paquete" 
+                           class="btn-whatsapp" target="_blank">
+                           ¡Agenda tu viaje!
+                        </a>
+                    </div>
+                </div>
+                <div class="package-card">
+                    <div class="package-image">
+                        <div class="image-placeholder">
+                            <img src="assets/images/paquete1.jpg" alt="" class="hero-main-image">
+                        </div>
+                    </div>
+                    <div class="package-content">
                         <h3>¡Visita la Tierra chairense!</h3>
                         <div class="package-content-wrapper">
                             <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
@@ -135,8 +165,8 @@
                            ¡Agenda tu viaje!
                         </a>
                     </div>
-                </div>
-                    </div>
+                </div>        
+            </div>
                 </div>
                 <button class="carousel-btn carousel-btn-next" id="packagesNext" aria-label="Paquete siguiente">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
