--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="package-content">
-                        <h3>¡Visita la Tierra chairense!</h3>
+                        <h3>Paquete 2</h3>
                         <div class="package-content-wrapper">
                             <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
                             <ul class="package-features">
