--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
                     </div>
                     <div class="package-content">
                         <h3>Paquete 1</h3>
+                        <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
+                            
                         <div class="package-content-wrapper">
                             <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
                             <ul class="package-features">  
@@ -140,6 +142,8 @@
                     </div>
                     <div class="package-content">
                         <h3>Paquete 2</h3>
+                        <p>En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
+                            
                         <div class="package-content-wrapper">
                             <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
                             <ul class="package-features">
