--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
                     </div>
                     <div class="package-content">
                         <h3>Paquete 1</h3>
-                        <p>En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
-                            
                         <div class="package-content-wrapper">
+                            <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
                             <ul class="package-features">  
                                 <li>Travesía Fluvial por los Ríos Guayas y Caguán (ida y regreso)</li>
                                 <li>Visita a la bocana</li>
@@ -141,9 +140,8 @@
                     </div>
                     <div class="package-content">
                         <h3>Paquete 2</h3>
-                        <p>En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
-                            
                         <div class="package-content-wrapper">
+                            <p class="package-description">En Cartagena del Chairá descubre la magia de la Bocana, ese encuentro de los magestuosos ríos Guayas y Caguán.</p>
                             <ul class="package-features">
                                 <li>Incluye transporte</li>
                                 <li>Travesía Fluvial por los Ríos Guayas y Caguán (ida y regreso)</li>
